# Qt-QQ

./: CMakeLists.txt  README.md  main.cpp
QQ-Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Resource.qrc  main.cpp
QQ-Client/ChatMessage/: CMakeLists.txt
QQ-Client/Client-ChatMessage/: CMakeLists.txt  ChatManager.cpp  ChatManager.h  ChatMessage.cpp  ChatMessage.h  ChatRecordManager.cpp  ChatRecordManager.h  ChatRecordMessage.cpp  ChatRecordMessage.h  MessageRecord.cpp  MessageRecord.h
QQ-Client/Client-Core/: CMakeLists.txt  EventBus.cpp  EventBus.h  MessageHandle.cpp  MessageHandle.h  MessageSender.cpp  MessageSender.h
QQ-Client/Client-Core/Client_MessageHandle/: Client_FriendHandle.cpp  Client_FriendHandle.h  Client_GroupHandle.cpp  Client_GroupHandle.h  Client_LoginHandle.cpp  Client_UserHandle.cpp  Client_UserHandle.h
QQ-Client/Client-DataCenter/: AvatarManager.cpp  AvatarManager.h  CMakeLists.txt  Friend.cpp  Friend.h  FriendManager.cpp  FriendManager.h  Group.cpp  Group.h  GroupManager.cpp  GroupManager.h  LoginUserManager.cpp  LoginUserManager.h  TempManager.cpp  TempManager.h
QQ-Client/Client-DataCenter/AvatarDataMoudle/: AvatarManager.cpp  AvatarManager.h
QQ-Client/Client-DataCenter/FriendDataMoudle/: Friend.h  FriendManager.cpp  FriendManager.h  FriendRespository.cpp  FriendRespository.h  FriendService.cpp  FriendService.h
QQ-Client/Client-DataCenter/GroupDataMoudle/: Group.h  GroupManager.cpp  GroupManager.h  GroupRespository.cpp  GroupRespository.h  GroupService.cpp  GroupService.h
QQ-Client/Client-DataCenter/LoginUserDataMoudle/: LoginUserManager.cpp  LoginUserManager.h
QQ-Client/Client-DataCenter/TempDataMoudle/: TempManager.cpp
QQ-Client/Client-FriendData/: AvatarManager.cpp  AvatarManager.h  CMakeLists.txt  Friend.cpp  Friend.h  FriendManager.cpp  FriendManager.h
QQ-Client/Client-GroupData/: CMakeLists.txt  Group.cpp  Group.h  GroupManager.cpp  GroupManager.h
QQ-Client/Client-Logger/: CMakeLists.txt  network_logger.cpp  network_logger.h
QQ-Client/Client-NetWork/: CMakeLists.txt  Client.cpp  Client.h  HttpClient.cpp  HttpClient.h  HttpClientPort.h  HttpWorker.cpp  HttpWorker.h  MessageHandle.cpp  MessageHandle.h  MessageQueue.cpp  MessageQueue.h  MessageSender.cpp  MessageSender.h  NetWorkService.cpp  NetWorkService.h  PacketCreate.cpp  PacketCreate.h  TokenManager.cpp  TokenManager.h  WebClient.cpp  WebClient.h
QQ-Client/Client-NetWork/Client_MessageHandle/: Client_FriendHandle.cpp  Client_FriendHandle.h  Client_GroupHandle.cpp  Client_GroupHandle.h  Client_LoginHandle.cpp  Client_LoginHandle.h  Client_UserHandle.cpp  Client_UserHandle.h
QQ-Client/Client-ServiceLocator/: NetWorkServiceLocator.cpp  NetWorkServiceLocator.h
QQ-Client/Client-UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
QQ-Client/Client-UI/LoginWidget/: LoginWidget.cpp  LoginWidget.h  PassWordChangePage.cpp  PassWordChangePage.h  PassWordChangePage.ui  RegisterPage.cpp  RegisterPage.h
QQ-Client/Client-UI/MainWidget/: MainWidget.cpp  MainWidget.h  MainWidget.ui
QQ-Client/Client-Util/: CMakeLists.txt  ImageUtil.cpp  ImageUtil.h  LineEditwithButton.cpp  LineEditwithButton.h  PacketCreate.cpp  RotationLabel.h  RoundLabel.cpp  RoundLabel.h  RoundMenu.cpp  RoundMenu.h  SMaskWidget.cpp  SMaskWidget.h
QQ-Client/FriendData/: CMakeLists.txt
QQ-Client/LoginWidget/: CMakeLists.txt  LoginWidget.cpp  LoginWidget.h  RegisterPage.cpp  RegisterPage.h  RegisterPage.ui
QQ-Client/MainWidget/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWidget.ui
QQ-Client/MainWidget/AddFriendWidget/: AddFriendWidget.cpp  AddFriendWidget.h  AddWidget.cpp  AddWidget.h  AddWidget.ui  SearchFriend.cpp  SearchFriend.h  SearchItemWidget.cpp  SearchItemWidget.h  SearchItemWidget.ui
QQ-Client/MainWidget/ContactPage/: CMakeLists.txt  ContactDetailWidget.cpp  ContactDetailWidget.h  ContactList.cpp  ContactList.h  ContactList.ui  ContactPage.cpp  ContactPage.h  ContactPage.ui  CreateFriendgrouping.cpp  CreateFriendgrouping.h  CreateFriendgrouping.ui  FriendNoticeItemWidget.cpp  FriendNoticeItemWidget.h  FriendNoticeItemWidget.ui  ItemWidget.cpp  ItemWidget.h  ItemWidget.ui  NoticeWidget.cpp  NoticeWidget.h  RotationLabel.cpp  TopItemWidget.cpp  TopItemWidget.h
QQ-Client/MainWidget/MessagePage/: AddFriendWidget.ui  CMakeLists.txt  ChatMessage.cpp  ChatMessage.h  FriendSetWidget.h  FriendSetWidget.ui  Message.cpp  Message.h  MessageBubble.cpp  MessageBubble.h  MessageListItem.cpp  MessageListItem.h  MessageListItem.ui  MessagePage.cpp  MessagePage.h  MessagePage.ui
QQ-Client/NetWork/: CMakeLists.txt  Client.cpp
QQ-Client/Resource/StyleSheet/: AddFriendWidget.css  ChatPage.css  ContactList.css  ContactListWidget.css  ContactPage.css  (+10 more)
QQ-Client/UI/: CMakeLists.txt  MainWindow.cpp
QQ-Client/Util/: AngleRoundedWidget.h  CMakeLists.txt  RotationLabel.cpp  RotationLabel.h  RoundLabel.h  SMaskWidget.cpp  SMaskWidget.h
QQ-Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
QQ-Server/Server-Core/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  HttpRouteManager.cpp  MessageHandle.cpp  MessageHandle.h
QQ-Server/Server-DataBase/: DataBaseQuery.cpp  DataBaseQuery.h  SSqlConnectionPool.cpp
QQ-Server/Server-NetWork/: CMakeLists.txt  ConnectionManager.cpp  HttpRouteManager.cpp  HttpServer.cpp  HttpServer.h  MessageHandle.cpp  MessageHandle.h  MessageQueue.cpp  MessageQueue.h  NetWorkService.cpp  NetWorkService.h  PacketCreate.cpp  PacketCreate.h  WebSocketServer.cpp  WebSocketServer.h
QQ-Server/Server-ServiceLocator/: NetWorkServiceLocator.cpp
QQ-Server/Server-Util/: CMakeLists.txt  CreateId.cpp  ImageUtil.cpp  ImageUtil.h  PacketCreate.cpp
QQ-Server/ServerUtil/: CMakeLists.txt
Util/: AngleRoundedWidget.cpp  CMakeLists.txt  ChatManager.cpp  ChatMessage.cpp  Client.cpp  Client.h  Friend.cpp  Friend.h  FriendManager.cpp  FriendManager.h  ImageUtil.cpp  ImageUtil.h  LineEditwithButton.cpp  LineEditwithButton.h  Message.cpp  Message.h  RoundLabel.cpp  RoundLabel.h  SMaskWidget.cpp  SMaskWidget.h  SSqlConnectionPool.cpp  SSqlConnectionPool.h  User.cpp  User.h
(+189 files in other folders)
