cmake_minimum_required(VERSION 3.14)

project(MessagePage VERSION 1.0 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED Widgets WebSockets)


file(GLOB MESSAGEPAEGE_SOURCES_CPP ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB MESSAGEPAGE_SOURCES_QRC ${CMAKE_CURRENT_SOURCE_DIR}/*.qrc)


list(APPEND MESSAGEPAGE_FILE ${MESSAGEPAEGE_SOURCES_CPP} ${MESSAGEPAGE_SOURCES_QRC})

add_library(${PROJECT_NAME} STATIC ${MESSAGEPAGE_FILE})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})


target_link_libraries(${PROJECT_NAME} PRIVATE  Qt6::Widgets Qt6::WebSockets Util)

